paginate audit logs fetch